--- a/src/app/features/cars/pages/cars/cars.component.html
+++ b/src/app/features/cars/pages/cars/cars.component.html
@@ -40,8 +40,8 @@
     <app-message *ngIf="cars.length === 0 && !isLoading" [message]="message">
     </app-message>
 </div>
-
-<app-dialog-car #dialogCar (confirmClick)="getCars()"></app-dialog-car>
+<!-- TODO Create dynamic modal component with ComponentFactoryResolver -->
+<ng-template #dialogCar></ng-template>
 
 <app-dialog #dialogDelete [config]="dialogDeleteConfig" (confirmClick)="confirmDialogDelete()" (cancelClick)="dialogDelete.close()"
     (closeClick)="dialogDelete.close()">
